Allow lending only user's own spots and prevent borrowing own spots