@@ -8,6 +8,7 @@ import com.jo2k.garagify.parking.mapper.TimeRangeMapper;
 import com.jo2k.garagify.parking.persistence.model.ParkingLend;
 import com.jo2k.garagify.parking.persistence.repository.ParkingBorrowRepository;
 import com.jo2k.garagify.parking.persistence.repository.ParkingLendRepository;
+import com.jo2k.garagify.user.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -22,11 +23,13 @@ public class AvailabilityBorrowServiceImpl implements ParkingAvailabilityService
     private final ParkingLendRepository parkingLendRepository;
     private final ParkingBorrowRepository borrowRepository;
     private final ParkingService parkingService;
+    private final UserService userService;
     private final TimeRangeMapper timeRangeMapper;
 
     @Override
     public List<TimeRangeDto> getTimeRanges(Integer parkingId, OffsetDateTime untilWhen) {
-        List<ParkingSpotDTO> spots = parkingService.getParkingSpotsByParkingId(parkingId);
+        UUID userId = userService.getCurrentUser().getId();
+        List<ParkingSpotDTO> spots = parkingService.getParkingSpotsByParkingIdNotOwnedByUser(parkingId, userId);
         List<TimeRangeDto> result = new ArrayList<>();
         for (var spot : spots) {
             UUID spotUuid = spot.getSpotUuid();
@@ -43,7 +46,8 @@ public class AvailabilityBorrowServiceImpl implements ParkingAvailabilityService
 
     @Override
     public List<UUID> getSpots(Integer parkingId, OffsetDateTime from, OffsetDateTime until) {
-        List<ParkingSpotDTO> spots = parkingService.getParkingSpotsByParkingId(parkingId);
+        UUID userId = userService.getCurrentUser().getId();
+        List<ParkingSpotDTO> spots = parkingService.getParkingSpotsByParkingIdNotOwnedByUser(parkingId, userId);
         List<UUID> result = new ArrayList<>();
         for (var spot : spots) {
             UUID spotUuid = spot.getSpotUuid();
@@ -82,7 +86,7 @@ public class AvailabilityBorrowServiceImpl implements ParkingAvailabilityService
         ranges.sort(Comparator.comparing(TimeRangeDto::getStart));
 
         List<TimeRangeDto> merged = new ArrayList<>();
-        TimeRangeDto prev = ranges.get(0);
+        TimeRangeDto prev = ranges.getFirst();
 
         for (int i = 1; i < ranges.size(); i++) {
             TimeRangeDto curr = ranges.get(i);
